[package]
name = "testquickxml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.145",features=["serde_derive"]}
quick-xml = { version = "0.25.0", features = ["serialize","encoding"] }

